# grokbuild-dev-team-template

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  grokbuild-agentic-dev-team-template-bootstrap.md  grokbuild-agentic-dev-team-template-bootstrap.review.md  pyproject.toml
.claude/: .template-manifest.json  settings.json
.claude/agents/: code-reviewer.md  debugger.md  docs-writer.md  explorer.md  implementer.md  planner.md  refactorer.md  security-auditor.md  test-engineer.md
.claude/commands/: checkpoint.md  commit.md  fix.md  plan.md  pr.md  review.md  ship.md  test.md
.claude/hooks/: format.sh  guard-bash.sh  log-subagent.sh  mark-changed.sh  protect-paths.sh  record-session-tokens.sh  session-start.sh  verify-on-stop.sh
.github/workflows/: ci.yml
.grok/: README.md
.grok/docs/: coverage-policy.md  plan-quality-standards.md  privacy-safety.md  test-accuracy-standards.md  ui-design-standards.md
.grok/personas/: gf-backend.toml  gf-debugger.toml  gf-frontend.toml  gf-plan-reviewer.toml  gf-qa.toml  gf-reviewer.toml
.grok/roles/: gf-backend.toml  gf-debugger.toml  gf-frontend.toml  gf-plan-reviewer.toml  gf-qa.toml  gf-reviewer.toml
.grok/rules/: accuracy-coverage.md  (+1 more)
docs/: FEATURES.md  USER_GUIDE.md  WORKFLOW.md
scripts/: aggregate_token_usage.py  deploy_template.py  install_agentic_team.py  install_git_hooks.py  prepare_commit_metrics.py  record_token_usage.py
tests/: test_board.py  test_cli.py  test_install_agentic_team.py  test_install_git_hooks.py  test_prepare_commit_metrics.py  test_record_token_usage.py  test_tags.py  test_util.py
(+58 files in other folders)
